k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataview
  template:
    metadata:
      labels:
        app: dataview
    spec:
      containers:
        - name: dataview
          image: ghcr.io/mariolyon/dataview:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      imagePullSecrets:
        - name: ghcr-login
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dataview
  labels:
    app: dataview
spec:
  type: ClusterIP
  selector:
    app: dataview
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dataview-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
    - host: dataview.digileo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dataview
                port:
                  number: 80
  tls:
    - hosts:
        - dataview.digileo.com
      secretName: dataview-cert
